# IA

prt1/: CMakeLists.txt  grafo.h  main.cc  menu.cc  menu.h
prt2/laberinto_dinamico/: CMakeLists.txt  laberinto.h  main.cc
prt2/laberinto_estatico/: apuntes  laberinto.h  main.cc
